// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page matches snapshot 1`] = `
<DocumentFragment>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="page-container stack"
  >
    <header
      __self="[object Object]"
      __source="[object Object]"
    >
      <span
        __self="[object Object]"
        __source="[object Object]"
        class="logo"
      >
        Hyödyntämätön
      </span>
    </header>
    <main
      __self="[object Object]"
      __source="[object Object]"
    >
      App which translates beer reviews to your language.
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="btn"
      >
        Log in with your Untappd account
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Home page matches snapshot when user is logged in 1`] = `
<DocumentFragment>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="page-container stack"
  >
    <button
      __self="[object Object]"
      __source="[object Object]"
      class="btn"
    >
      Pubs Nearby
    </button>
    <button
      __self="[object Object]"
      __source="[object Object]"
      class="btn"
    >
      Account
    </button>
    <button
      __self="[object Object]"
      __source="[object Object]"
      class="btn"
    >
      About
    </button>
  </div>
</DocumentFragment>
`;
